--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,6 @@ language: ruby
 rvm:
   - 2.2.2
 before_install: gem install bundler -v 1.10.5
+addons:
+  code_climate:
+    repo_token: a1f29c1cced1720abb3601bc2b78f8b5afe0131355eb1fdf65d05a4c4b72f099
